--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles.css" />
-    <title>Raj Shekhar</title>
+    <title>Eve Cruickshank</title>
   </head>
   <body class="light" id="top">
     <header class="header center">
@@ -55,14 +55,12 @@
     <main>
       <!-- About -->
       <div class="about center">
-        <h1>Hi, I am <span class="about__name">Raj Shekhar.</span></h1>
-        <h2 class="about__role">A Front end Developer.</h2>
+        <h1>Hi, I am <span class="about__name">Eve Cruickshank.</span></h1>
+        <h2 class="about__role">A Game Developer.</h2>
         <p class="about__desc">
           Consectetur neque sed quam molestiae consectetur nesciunt sit alias
-          Vitae libero perferendis reprehenderit optio veritatis Accusantium at
-          voluptatum cumque temporibus et Explicabo iste porro quis numquam
-          distinctio Repellendus adipisci nam perferendis amet eaque hic
-          Voluptates
+          I love to work on 3D, 2D and virtual reality games using Unity and c#
+          as well as game art using Blender and Asprite.
         </p>
 
         <div class="about__contact center">
@@ -94,16 +92,15 @@
 
         <div class="projects__grid">
           <div class="project">
-            <h3>Project 1</h3>
+            <h3>Florida Baby</h3>
             <p class="project__description">
-              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-              sapiente debitis labore sed ipsam Mollitia repellat illum quod
-              unde beatae Quis
+              A solo university VR escape room project about escaping
+              a sinking ship. All the models were designed and created by me
             </p>
             <ul class="project__stack">
-              <li class="project__stack-item">SASS</li>
-              <li class="project__stack-item">TypeScript</li>
-              <li class="project__stack-item">React</li>
+              <li class="project__stack-item">Unity</li>
+              <li class="project__stack-item">C#</li>
+              <li class="project__stack-item">Blender</li>
             </ul>
 
             <a
@@ -118,7 +115,7 @@
               aria-label="live preview"
               class="link link--icon"
             >
-              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+              <i aria-hidden="false" class="fas fa-external-link-alt"></i>
             </a>
           </div>
 
