More testing and trialling

--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
         <h1>Hi, I am <span class="about__name">Eve Cruickshank.</span></h1>
         <h2 class="about__role">A Game Developer.</h2>
         <p class="about__desc">
-          Consectetur neque sed quam molestiae consectetur nesciunt sit alias
-          I love to work on 3D, 2D and virtual reality games using Unity and c#
+          I love to work on 3D, 2D and virtual reality games using Unity and C#,
           as well as game art using Blender and Asprite.
         </p>
 
@@ -94,7 +93,7 @@
           <div class="project">
             <h3>Florida Baby</h3>
             <p class="project__description">
-              A solo university VR escape room project about escaping
+              A VR escape room project about escaping
               a sinking ship. All the models were designed and created by me
             </p>
             <ul class="project__stack">
@@ -110,26 +109,17 @@
             >
               <i aria-hidden="true" class="fab fa-github"></i>
             </a>
-            <a
-              href="https://example.com"
-              aria-label="live preview"
-              class="link link--icon"
-            >
-              <i aria-hidden="false" class="fas fa-external-link-alt"></i>
-            </a>
           </div>
 
           <div class="project">
-            <h3>Project 2</h3>
+            <h3>VR Playground</h3>
             <p class="project__description">
-              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-              sapiente debitis labore sed ipsam Mollitia repellat illum quod
-              unde beatae Quis
+              My first VR project, a lab to gain experience using Unity's 
+              virtual reality packages and systems
             </p>
             <ul class="project__stack">
-              <li class="project__stack-item">SASS</li>
-              <li class="project__stack-item">TypeScript</li>
-              <li class="project__stack-item">React</li>
+              <li class="project__stack-item">Unity</li>
+              <li class="project__stack-item">C#</li>
             </ul>
 
             <a
