--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="header center">
       <h3>
         <a href="https://evecrui.github.io/github-portfolio/" class="link"
-          >RS.</a
+          >EC.</a
         >
       </h3>
 
@@ -129,26 +129,17 @@
             >
               <i aria-hidden="true" class="fab fa-github"></i>
             </a>
-            <a
-              href="https://example.com"
-              aria-label="live preview"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
-            </a>
           </div>
 
           <div class="project">
-            <h3>Project 3</h3>
+            <h3>Rhythm Adventure</h3>
             <p class="project__description">
-              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-              sapiente debitis labore sed ipsam Mollitia repellat illum quod
-              unde beatae Quis
+              A simple VR rhythm game.
+              Essentially just a synth riders clone
             </p>
             <ul class="project__stack">
-              <li class="project__stack-item">SASS</li>
-              <li class="project__stack-item">TypeScript</li>
-              <li class="project__stack-item">React</li>
+              <li class="project__stack-item">Unity</li>
+              <li class="project__stack-item">C#</li>
             </ul>
 
             <a
@@ -158,13 +149,6 @@
             >
               <i aria-hidden="true" class="fab fa-github"></i>
             </a>
-            <a
-              href="https://example.com"
-              aria-label="live preview"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
-            </a>
           </div>
         </div>
       </section>
@@ -173,18 +157,12 @@
       <section class="section skills" id="skills">
         <h2 class="section__title">Skills</h2>
         <ul class="skills__list">
-          <li class="skills__list-item btn btn--plain">HTML</li>
-          <li class="skills__list-item btn btn--plain">CSS</li>
-          <li class="skills__list-item btn btn--plain">SCSS</li>
-          <li class="skills__list-item btn btn--plain">JavaScript</li>
-          <li class="skills__list-item btn btn--plain">TypeScript</li>
-          <li class="skills__list-item btn btn--plain">React</li>
-          <li class="skills__list-item btn btn--plain">Redux</li>
+          <li class="skills__list-item btn btn--plain">Unity</li>
+          <li class="skills__list-item btn btn--plain">C#</li>
+          <li class="skills__list-item btn btn--plain">Python</li>
+          <li class="skills__list-item btn btn--plain">Blender</li>
+          <li class="skills__list-item btn btn--plain">Aseprite</li>
           <li class="skills__list-item btn btn--plain">Git</li>
-          <li class="skills__list-item btn btn--plain">Material UI</li>
-          <li class="skills__list-item btn btn--plain">Jest</li>
-          <li class="skills__list-item btn btn--plain">Enzyme</li>
-          <li class="skills__list-item btn btn--plain">CI/CD</li>
         </ul>
       </section>
 
@@ -202,7 +180,8 @@
         href="https://github.com/rajshekhar26/cleanfolio-minimal"
         class="link footer__link"
       >
-        Created By Raj Shekhar
+        Created By Eve Cruickshank
+        <br>Template by Raj Shekhar
       </a>
     </footer>
 
